--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -151,6 +151,12 @@
 /* Text indicating that calls are end-to-end encrypted */
 "call.encryption.text" = "رمزگذاری سرتاسر";
 
+/* Title for call history event for an incoming call. */
+"call.history.incoming.call" = "@%  با شما تماس گرفت";
+
+/* Title for call history event for an outgoing call */
+"call.history.outgoing.call" = "شما با @% تماس گرفتید";
+
 /* Title for call history event. Appears next to details of a successful call. */
 "call.history.video.call" = "تماس ویدیویی";
 
@@ -520,6 +526,9 @@
 /* Title for generic delete button. */
 "Delete" = "حذف";
 
+/* Body of the bottom sheet that is presented only once to explain the moments feature. */
+"describing.moments" = "لحظه‌های دوستان خود را با به اشتراک گذاشتن لحظه‌های خود باز کنید. لحظه‌ها سرگرمی هستند، بعد از یک بار دیدن از بین میروند.";
+
 /* link, tapping on which launched the flow to edit blocked contacts */
 "edit.blocked" = "ویرایش";
 
@@ -552,6 +561,9 @@
 
 /* VoiceOver label for audio post button in floating compose post menu in Home view. */
 "fab.accessibility.voice" = "پیام صوتی";
+
+/* Label for floating moment button on home feed. */
+"fab.moment.button" = "لحظه";
 
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "پست";
@@ -910,6 +922,9 @@
 /* Title of failed video call screen alert. */
 "home.video.calls.fail.title" = "تماس ویدیویی در حال حاضر ممکن نیست.";
 
+/* Title of the bottom sheet that is presented only once to explain the moments feature. */
+"introducing.moments" = "لحظه را معرفی میکنیم";
+
 /* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
 "invite.action.sheet.title" = "دعوت %@ از طریق...";
 
@@ -1063,6 +1078,15 @@
 /* Text on loading screen while migrating data */
 "migration.inProgress" = "بهینه‌سازی داده‌ها...";
 
+/* Disclaimer to tell the user that their moments go to all of their contacts on HalloApp. */
+"moment.contacts.disclaimer" = "لحظه شما فقط با مخاطبین هالواپتان به اشتراک گذاشته میشود";
+
+/* Text displayed the first time the user acts to post a second moment in the same day. */
+"moment.replacement.disclaimer" = "لحظه جدید شما جایگزین لحظه قبلیتان میشود";
+
+/* Title of text displayed the first time the user acts to post a second moment in the same day. */
+"moment.replacement.title" = "توجه";
+
 /* For indicating that there was an error while uploading the post. */
 "moment.uploading.failure" = "خطا";
 
@@ -1116,6 +1140,9 @@
 
 /* Header that appears above unread messages in the comments view. */
 "n.unread.comments.title" = "n.unread.comments.title";
+
+/* Header that appears above unread messages in the chats view. */
+"n.unread.messages.title" = "n.unread.messages.title";
 
 /* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
 "new.group.members.empty.placeholder" = "مخاطبین شما که در هالواپ هستند اینجا ظاهر میشوند";
@@ -1707,6 +1734,9 @@
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "دیده شد توسط";
+
+/* Text on the bottom sheet's button that dismisses the sheet. */
+"try.moments" = "لحظه‌ها را امتحان کنید";
 
 /* Indicates which switch a user needs to turn on to enable contacts permissions. */
 "turn.on.contacts" = "«مخاطب‌ها» را فعال کنید";
