--- a/Halloapp/pt.lproj/Localizable.stringsdict
+++ b/Halloapp/pt.lproj/Localizable.stringsdict
@@ -215,7 +215,7 @@
 	<key>n.unread.messages.title</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_unread_messages@</string>
+		<string>%#@n_mensagens@_ não lidas_</string>
 		<key>n_unread_messages</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -223,9 +223,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d Unread Message</string>
+			<string>%d mensagem não lida</string>
 			<key>other</key>
-			<string>%d Unread Messages</string>
+			<string>%d mensagens não lidas</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
