--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -139,6 +139,18 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Neuer Moment";
 
+/* New moment notification text to be shown to the user. */
+"notification.moment.1" = "%@ hat einen neuen Moment geteilt";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.2" = "%1$@ und %2$@ haben neue Momente geteilt";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.3" = "%1$@, %2$@ und %3$@ haben neue Momente geteilt";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.5" = "%1$@, %2$@, %3$@ und weitere Kontakte haben neue Momente geteilt";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
