--- a/Notification Service Extension/pt.lproj/Localizable.strings
+++ b/Notification Service Extension/pt.lproj/Localizable.strings
@@ -139,6 +139,18 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Novo momento";
 
+/* New moment notification text to be shown to the user. */
+"notification.moment.1" = "%@ compartilhou um novo momento";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.2" = "%1$@ e %2$@ compartilharam novos momentos";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.3" = "%1$@, %2$@ e %3$@ compartilharam novos momentos";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.5" = "%1$@, %2$@, %3$@ and others shared new moments";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notificação.n.fotos";
 
