--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -379,6 +379,9 @@
 /* Alert title when missing microphone access */
 "chat.mic.access.denied.title" = "Kan geen toegang krijgen tot microfoon";
 
+/* cta label for creating a new group chat */
+"chat.new.group.label" = "Nieuwe Groepschat";
+
 /* Text below the contact's name when the contact is online in the Chat Screen */
 "chat.online.label" = "online";
 
