--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -151,6 +151,12 @@
 /* Text indicating that calls are end-to-end encrypted */
 "call.encryption.text" = "Сквозное шифрование";
 
+/* Title for call history event for an incoming call. */
+"call.history.incoming.call" = "%@ звонил тебе";
+
+/* Title for call history event for an outgoing call */
+"call.history.outgoing.call" = "Вы позвонили %@";
+
 /* Title for call history event. Appears next to details of a successful call. */
 "call.history.video.call" = "Видеозвонок";
 
@@ -246,6 +252,9 @@
 
 /* Text shown on the camera screen when composing a new moment to unlock someone else's moment. */
 "camera.moment.unlock.subtitle" = "Чтобы увидеть момент %@, поделитесь своим";
+
+/* Title of alert for when the app does not have permissions to access the camera. */
+"camera.permissions.title" = "Доступ к камере";
 
 /* No comment provided by engineer. */
 "Cancel" = "Отмена";
@@ -517,6 +526,9 @@
 /* Title for generic delete button. */
 "Delete" = "Удалить";
 
+/* Body of the bottom sheet that is presented only once to explain the moments feature. */
+"describing.moments" = "Разблокируйте моменты ваших друзей, поделившись своими. Моменты случайны, они исчезают после того, как вы их просмотрите один раз.";
+
 /* link, tapping on which launched the flow to edit blocked contacts */
 "edit.blocked" = "Редактировать";
 
@@ -549,6 +561,9 @@
 
 /* VoiceOver label for audio post button in floating compose post menu in Home view. */
 "fab.accessibility.voice" = "Голосовая заметка";
+
+/* Label for floating moment button on home feed. */
+"fab.moment.button" = "Момент";
 
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "Публикация";
@@ -907,6 +922,9 @@
 /* Title of failed video call screen alert. */
 "home.video.calls.fail.title" = "Видеозвонки пока не поддерживаются.";
 
+/* Title of the bottom sheet that is presented only once to explain the moments feature. */
+"introducing.moments" = "Представляем Моменты";
+
 /* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
 "invite.action.sheet.title" = "Пригласить %@ по...";
 
@@ -1060,6 +1078,15 @@
 /* Text on loading screen while migrating data */
 "migration.inProgress" = "Оптимизация данных…";
 
+/* Disclaimer to tell the user that their moments go to all of their contacts on HalloApp. */
+"moment.contacts.disclaimer" = "Ваш Момент будет доступен только вашим контактам в HalloApp";
+
+/* Text displayed the first time the user acts to post a second moment in the same day. */
+"moment.replacement.disclaimer" = "Этот новый Момент заменит ваш предыдущий.";
+
+/* Title of text displayed the first time the user acts to post a second moment in the same day. */
+"moment.replacement.title" = "Осторожно";
+
 /* For indicating that there was an error while uploading the post. */
 "moment.uploading.failure" = "Ошибка";
 
@@ -1113,6 +1140,9 @@
 
 /* Header that appears above unread messages in the comments view. */
 "n.unread.comments.title" = "n.unread.comments.title";
+
+/* Header that appears above unread messages in the chats view. */
+"n.unread.messages.title" = "n.unread.messages.title";
 
 /* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
 "new.group.members.empty.placeholder" = "Тут появятся ваши контакты, которые пользуют HalloApp";
@@ -1657,6 +1687,9 @@
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Вчера";
 
+/* Camera screen title */
+"title.camera" = "Камера";
+
 /* Camera screen title for a new moment */
 "title.camera.moment" = "Новый момент";
 
@@ -1701,6 +1734,9 @@
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "Видели:";
+
+/* Text on the bottom sheet's button that dismisses the sheet. */
+"try.moments" = "Попробуйте Моменты";
 
 /* Indicates which switch a user needs to turn on to enable contacts permissions. */
 "turn.on.contacts" = "Включи \"Контакты\"";
